--- a/gestion_cave.yaml
+++ b/gestion_cave.yaml
@@ -14,7 +14,10 @@ input_text:
   v2_vin_convoite:
     name: "Vin à tester"
     icon: mdi:cart-search
-
+  v2_vin_convoite:
+    name: "Vin à tester"
+    icon: mdi:cart-search
+    
 input_number:
   v2_budget_max_achat:
     name: "Budget Max / Bouteille"
@@ -592,4 +595,5 @@ automation:
       
       - action: input_boolean.turn_off
         target: { entity_id: input_boolean.ia_en_cours }
+
 
