--- a/gestion_cave.yaml
+++ b/gestion_cave.yaml
@@ -17,7 +17,7 @@ input_text:
   v2_vin_highlight:
     name: "Vin identifié par l'IA"
     icon: mdi:target
-    
+
 input_number:
   v2_budget_max_achat:
     name: "Budget Max / Bouteille"
@@ -90,7 +90,7 @@ input_boolean:
 template:
   - trigger:
       - platform: event
-        event_type: "EVENT_OPPORTUNITE_IA_REUSSI" # Nouvel événement dédié
+        event_type: "EVENT_OPPORTUNITE_IA_REUSSI"
     sensor:
       - name: "IA Sommelier Opportunité Achat"
         unique_id: ia_sommelier_opportunite_achat
@@ -98,7 +98,7 @@ template:
         state: "Prêt"
         attributes:
           analyse: "{{ trigger.event.data.analyse }}"
-  # STOCKAGE DU RAPPORT D'AUDIT IA
+          
   - trigger:
       - platform: event
         event_type: "EVENT_AUDIT_IA_REUSSI"
@@ -110,7 +110,6 @@ template:
         attributes:
           conseils: "{{ trigger.event.data.conseils }}"
           
-          # 1. LE SENSOR DE RECHERCHE
   - trigger:
       - platform: event
         event_type: "REMPLIR_VIN_RECHERCHE"
@@ -160,7 +159,6 @@ template:
             {{ trigger.event.data.prix_moyen | to_json if (trigger is defined and trigger.event.data is defined and trigger.event.data.prix_moyen is defined) 
                else '{"valeur": "-", "confiance": "0%"}' }}
 
-  # 2. LE SUPERSENSOR (Persistance des données)
   - trigger:
       - platform: event
         event_type: "UPDATE_CAVE_FINAL"
@@ -171,15 +169,15 @@ template:
         attributes:
           vins: "{{ trigger.event.data.new_collection }}"
 
-  # 3. STATISTIQUES
   - sensor:
       - name: "Cave Nombre de Bouteilles"
         unique_id: cave_nombre_bouteilles
         unit_of_measurement: "btls"
         icon: mdi:bottle-wine
         state: >
-          {% set cave = state_attr('sensor.cave_a_vin_supersensor', 'vins') %}
-          {% if cave is not none %}
+          {% set raw_cave = state_attr('sensor.cave_a_vin_supersensor', 'vins') %}
+          {% set cave = raw_cave if raw_cave is mapping else (raw_cave | from_json if raw_cave is string else {}) %}
+          {% if cave is mapping %}
             {% set ns = namespace(total=0) %}
             {% for key, val in cave.items() %}
               {% set ns.total = ns.total + (val.nombre_bouteilles | int(0)) %}
@@ -194,11 +192,13 @@ template:
         unit_of_measurement: "€"
         icon: mdi:currency-eur
         state: >
-          {% set cave = state_attr('sensor.cave_a_vin_supersensor', 'vins') %}
-          {% if cave is not none %}
+          {% set raw_cave = state_attr('sensor.cave_a_vin_supersensor', 'vins') %}
+          {% set cave = raw_cave if raw_cave is mapping else (raw_cave | from_json if raw_cave is string else {}) %}
+          {% if cave is mapping %}
             {% set ns = namespace(valeur=0) %}
             {% for key, val in cave.items() %}
-              {% set prix = val.prix_moyen.valeur | int(0) if val.prix_moyen is mapping else val.prix_moyen | int(0) %}
+              {% set prix_data = val.prix_moyen.valeur if val.prix_moyen is mapping else val.prix_moyen %}
+              {% set prix = prix_data | int(0) %}
               {% set qte = val.nombre_bouteilles | int(0) %}
               {% set ns.valeur = ns.valeur + (prix * qte) %}
             {% endfor %}
@@ -207,7 +207,6 @@ template:
             0
           {% endif %}
 
-  # SENSOR POUR RÉPONSE LONGUE DU SOMMELIER
   - trigger:
       - platform: event
         event_type: "EVENT_ACCORD_IA_REUSSI"
@@ -220,7 +219,6 @@ template:
           reponse: "{{ trigger.event.data.reponse }}"
           
 automation:
-  # 1. IA - RECHERCHE AVEC NETTOYAGE JSON ROBUSTE
   - alias: "IA - Recherche Vin Expert V2"
     id: ia_recherche_vin_expert_v2
     mode: restart
@@ -241,7 +239,6 @@ automation:
             Analyse : {{ states('input_text.v2_recherche_nom') }}, {{ states('input_text.v2_recherche_couleur') }}, {{ states('input_text.v2_recherche_annee') }}.
             STRUCTURE : {"nom": {"valeur": "...", "confiance": "100%"}, "annee": {"valeur": 2018, "confiance": "100%"}, "couleur": {"valeur": "...", "confiance": "100%"}, "cepages": {"valeur": "...", "confiance": "95%"}, "note_moyenne": {"valeur": "...", "sites consultes": "...", "confiance": "98%"}, "appellation": {"valeur": "...", "confiance": "100%"}, "provenance": {"valeur": "...", "confiance": "100%"}, "garde_conseillee": {"valeur": "...", "confiance": "90%"}, "fenetre_consommation": {"valeur": "...", "confiance": "90%"}, "apogee": {"valeur": 2029, "confiance": "85%"}, "date_limite": {"valeur": "...", "confiance": "85%"}, "prix_moyen": {"valeur": "35", "magasins sources": "...", "confiance": "95%"}}
         response_variable: gemini_result
-
       - if:
           - condition: template
             value_template: "{{ gemini_result.data is defined and gemini_result.data | length > 50 }}"
@@ -298,7 +295,6 @@ automation:
       - action: input_boolean.turn_off
         target: { entity_id: input_boolean.ia_en_cours }
 
-  # 2. CAPTURE ERREURS LOG
   - alias: "Système - Capture Erreur Quota Gemini"
     id: systeme_capture_erreur_quota_gemini
     trigger:
@@ -320,7 +316,6 @@ automation:
         data:
           value: "{{ trigger.event.data.message[0][:250] if trigger.event.data.message[0] is not none else 'Erreur' }}"
 
-  # 3. TRANSFERT RECHERCHE -> INVENTAIRE
   - alias: "Cave - Ajouter et Reset Recherche"
     id: cave_ajouter_et_reset
     mode: queued
@@ -351,7 +346,6 @@ automation:
             {{ dict(current_vins, **{entry_id: new_wine}) }}
       - event: VIDER_VIN_RECHERCHE
 
-  # 4. GESTION DES STOCKS
   - alias: "Cave - Ajuster Stock"
     id: cave_ajuster_stock
     trigger:
@@ -362,7 +356,8 @@ automation:
           selection: "{{ states('input_select.selection_vin_suppression') }}"
           target_id: "{{ selection.split(' | ')[0] if '|' in selection else '' }}"
           diff: "{{ 1 if trigger.entity_id == 'input_button.increment_stock' else -1 }}"
-          current_vins: "{{ state_attr('sensor.cave_a_vin_supersensor', 'vins') | default({}, true) }}"
+          raw_vins: "{{ state_attr('sensor.cave_a_vin_supersensor', 'vins') | default({}, true) }}"
+          current_vins: "{{ raw_vins if raw_vins is mapping else (raw_vins | from_json if raw_vins is string else {}) }}"
       - if:
           - condition: template
             value_template: "{{ target_id != '' and target_id in current_vins }}"
@@ -381,7 +376,6 @@ automation:
                 {% endfor %}
                 {{ ns.new_dict }}
 
-  # 5. MISE A JOUR DU SELECTEUR
   - alias: "Cave - Mise à jour liste"
     id: cave_update_select
     trigger:
@@ -396,8 +390,9 @@ automation:
           entity_id: input_select.selection_vin_suppression
         data:
           options: >
-            {% set cave = state_attr('sensor.cave_a_vin_supersensor', 'vins') %}
-            {% if cave is not none and cave.items() | count > 0 %}
+            {% set raw_cave = state_attr('sensor.cave_a_vin_supersensor', 'vins') %}
+            {% set cave = raw_cave if raw_cave is mapping else (raw_cave | from_json if raw_cave is string else {}) %}
+            {% if cave is mapping and cave.items() | count > 0 %}
               {% set ns = namespace(items=["Aucun vin"]) %}
               {% for id, info in cave.items() %}
                 {% set label = id ~ " | " ~ info.nom.valeur ~ " (" ~ info.annee.valeur ~ ")" %}
@@ -408,7 +403,6 @@ automation:
               {{ ["Aucun vin"] }}
             {% endif %}
 
-  # 6. SUPPRESSION D'UNE ENTRÉE
   - alias: "Cave - Supprimer Vin"
     id: cave_delete_entry
     trigger:
@@ -418,7 +412,8 @@ automation:
       - variables:
           selection: "{{ states('input_select.selection_vin_suppression') }}"
           target_id: "{{ selection.split(' | ')[0] if '|' in selection else '' }}"
-          current_vins: "{{ state_attr('sensor.cave_a_vin_supersensor', 'vins') | default({}, true) }}"
+          raw_vins: "{{ state_attr('sensor.cave_a_vin_supersensor', 'vins') | default({}, true) }}"
+          current_vins: "{{ raw_vins if raw_vins is mapping else (raw_vins | from_json if raw_vins is string else {}) }}"
       - if:
           - condition: template
             value_template: "{{ target_id != '' and target_id in current_vins }}"
@@ -439,6 +434,7 @@ automation:
             data:
               option: "Aucun vin"
 
+
   - alias: "IA - Accord Mets Expert V2"
     id: ia_accord_mets_expert_v2
     mode: restart
@@ -456,69 +452,74 @@ automation:
           task_name: accord mets vins
           instructions: >-
             Agis comme un sommelier expert. Ta réponse doit être uniquement un dictionnaire JSON pur.
-            
             MA CAVE :
-            {% set vins = state_attr('sensor.cave_a_vin_supersensor', 'vins') %}
+            {% set raw_vins = state_attr('sensor.cave_a_vin_supersensor', 'vins') %}
+            {% set vins = raw_vins if raw_vins is mapping else (raw_vins | from_json if raw_vins is string else {}) %}
             {%- for key, info in vins.items() if info.nombre_bouteilles | int > 0 -%}
               - {{ info.nom.valeur }} ({{ info.annee.valeur }}), {{ info.appellation.valeur }}, Apogée: {{ info.apogee.valeur }}
             {%- endfor %}
-
             ANALYSE POUR LE PLAT : "{{ states('input_text.v2_plat_du_jour') }}"
             ANNÉE ACTUELLE : {{ now().year }}
-
             STRUCTURE : {"choix": "Nom + Année", "raison": "Explication détaillée", "service": "Carafe/Température"}
         response_variable: accord_result
-
       - if:
           - condition: template
             value_template: "{{ accord_result.data is defined and accord_result.data | length > 20 }}"
         then:
+          - variables:
+              res: "{{ accord_result.data | replace('```json', '') | replace('```', '') | trim | from_json }}"
+          
+          # 1. Mise à jour de l'entité de surbrillance (déclenchera la visu si présente)
+          - action: input_text.set_value
+            target:
+              entity_id: input_text.v2_vin_highlight
+            data:
+              value: "{{ res.choix }}"
+
+          # 2. Envoi de l'événement pour les capteurs de texte
           - event: EVENT_ACCORD_IA_REUSSI
             event_data:
-              reponse: >
-                {% set res = accord_result.data | replace('```json', '') | replace('```', '') | trim | from_json %}
-                {{ res.choix }} : {{ res.raison }} ({{ res.service }})
+              reponse: "{{ res.choix }} : {{ res.raison }} ({{ res.service }})"
+              
         else:
           - action: input_boolean.turn_on
             target: { entity_id: input_boolean.ia_erreur }
+            
       - action: input_boolean.turn_off
         target: { entity_id: input_boolean.ia_en_cours }
 
   - alias: "IA - Audit Stratégique Cave Synthétique"
-    id: ia_audit_strategique_cave_unique_v3 # ID Unique pour éviter les conflits
+    id: ia_audit_strategique_cave_unique_v3
     mode: restart
     trigger:
       - platform: state
-        entity_id: input_button.v2_bouton_audit_cave # Trigger spécifique
+        entity_id: input_button.v2_bouton_audit_cave
     action:
       - action: input_boolean.turn_off
         target: { entity_id: input_boolean.ia_erreur }
       - action: input_boolean.turn_on
         target: { entity_id: input_boolean.ia_en_cours }
-      
       - action: ai_task.generate_data
         data:
           entity_id: ai_task.google_ai_task
           task_name: audit express 5 vins
           instructions: >-
             Agis en sommelier conseil. Analyse ma cave (Année {{ now().year }}) :
-            {% set vins = state_attr('sensor.cave_a_vin_supersensor', 'vins') %}
+            {% set raw_vins = state_attr('sensor.cave_a_vin_supersensor', 'vins') %}
+            {% set vins = raw_vins if raw_vins is mapping else (raw_vins | from_json if raw_vins is string else {}) %}
             {%- for key, info in vins.items() if info.nombre_bouteilles | int > 0 -%}
-              - {{ info.nom.valeur }}, {{ info.appellation.valeur }}, {{ info.couleur.valeur }}, Apogée: {{ info.apogee.valeur }}
+              - {{ info.nom.valeur }}, {{ info.appellation.valeur }}, {{ info.couleur.valeur }}, Apogée: {{ info.apogee.valeur }}, Nombre de bouteilles {{ info.nombre_bouteilles }}
             {%- endfor %}
-
             CONSIGNES :
             1. Analyse l'équilibre (couleurs et maturité).
             2. Propose exactement 5 vins sous le seuil de {{ states('input_number.v2_budget_max_achat') }}€, avec l'intervalle de millesimes a viser pour equilibrer la cave.
             3. Région prioritaire : {{ states('input_select.v2_priorite_region') }}.
-
             FORMAT JSON OBLIGATOIRE : 
             {
               "bilan": "Une phrase synthétique.",
-              "achats": "\n1. [Nom] ([Appellation]) - [Couleur] - [Prix] : [Utilité]\n2. [Vin 2]...\n3. [Vin 3]...\n4. [Vin 4]...\n5. [Vin 5]..."
+              "achats": "\n1. [Nom] ([Appellation]) - [Couleur] - [Prix] - [Nombre de bouteilles a viser] : [Utilité]\n2. [Vin 2]...\n3. [Vin 3]...\n4. [Vin 4]...\n5. [Vin 5]..."
             }
         response_variable: audit_result
-
       - if:
           - condition: template
             value_template: "{{ audit_result.data is defined and audit_result.data | length > 20 }}"
@@ -528,13 +529,11 @@ automation:
               conseils: >
                 {% set res = audit_result.data | replace('```json', '') | replace('```', '') | trim | from_json %}
                 **Bilan :** {{ res.bilan }}
-
                 **Suggestions (<{{ states('input_number.v2_budget_max_achat') }}€) :**
                 {{ res.achats }}
         else:
           - action: input_boolean.turn_on
             target: { entity_id: input_boolean.ia_erreur }
-            
       - action: input_boolean.turn_off
         target: { entity_id: input_boolean.ia_en_cours }
   
@@ -547,34 +546,30 @@ automation:
     action:
       - action: input_boolean.turn_on
         target: { entity_id: input_boolean.ia_en_cours }
-      
       - action: ai_task.generate_data
         data:
           entity_id: ai_task.google_ai_task
           task_name: analyse_opportunite_complete
           instructions: >-
             Expert en vin, analyse ce projet d'achat : {{ states('input_text.v2_vin_convoite') }}.
-            
             MA CAVE ACTUELLE :
-            {% set vins = state_attr('sensor.cave_a_vin_supersensor', 'vins') %}
+            {% set raw_vins = state_attr('sensor.cave_a_vin_supersensor', 'vins') %}
+            {% set vins = raw_vins if raw_vins is mapping else (raw_vins | from_json if raw_vins is string else {}) %}
             {%- for key, info in vins.items() if info.nombre_bouteilles | int > 0 -%}
-              - {{ info.nom.valeur }} ({{ info.appellation.valeur }}), {{ info.couleur.valeur }}, Apogée: {{ info.apogee.valeur }}
+              - {{ info.nom.valeur }} ({{ info.appellation.valeur }}), {{ info.couleur.valeur }}, Apogée: {{ info.apogee.valeur }}, Nombre de bouteilles {{ info.nombre_bouteilles }}
             {%- endfor %}
-
             MISSIONS SUPPLÉMENTAIRES :
             1. PRIX : Estime un prix d'achat conseillé (moyenne du marché actuel).
-            2. MILLÉSIME : En fonction de ma cave, quel millésime de ce vin devrais-je viser (pour boire bientôt ou pour garder longtemps selon mes manques) ?
-
+            2. MILLÉSIME : En fonction de ma cave, quel millésime de ce vin devrais-je viser ?
             RÉPONSE JSON STRICTE :
             {
               "ressemblance": "Vin proche en cave + pourquoi",
               "pertinence": "Doublon ou manque ? (court)",
               "prix_conseille": "X € (basé sur [source])",
               "millesime_vise": "Année + raison stratégique",
-              "verdict": "ACHAT VALIDÉ ou DÉCONSEILLÉ + raison"
+              "verdict": "ACHAT VALIDÉ ou DÉCONSEILLÉ + raison + nombre de bouteilles a viser
             }
         response_variable: opportunite_result
-
       - if:
           - condition: template
             value_template: "{{ opportunite_result.data is defined }}"
@@ -584,17 +579,9 @@ automation:
               analyse: >
                 {% set res = opportunite_result.data | replace('```json', '') | replace('```', '') | trim | from_json %}
                 **🔍 Ressemblance :** {{ res.ressemblance }}
-
                 **⚖️ Analyse :** {{ res.pertinence }}
-
                 **💰 Prix conseillé :** {{ res.prix_conseille }}
-
                 **📅 Millésime à viser :** {{ res.millesime_vise }}
-
                 **🚀 Verdict :** {{ res.verdict }}
-      
       - action: input_boolean.turn_off
         target: { entity_id: input_boolean.ia_en_cours }
-
-
-
